// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SideDialog > snapshot test 1`] = `
<div>
  <div
    class="vurderingAarsavregning"
  >
    <h1
      class="typo-innholdstittel stegvelgertittel"
    >
      Årsavregning
    </h1>
    <fieldset
      class="fieldset select"
    >
      <legend
        class="fieldset__legend"
      >
        <div
          class="labelMedHjelpetekst__wrapper"
        >
          <span>
            <b>
              År
            </b>
          </span>
        </div>
      </legend>
      <div
        class="row"
      >
        <div
          class="col col-xs-4"
        >
          <div
            class="skjemaelement"
          >
            <div
              class="selectContainer input--fullbredde"
            >
              <select
                aria-invalid="false"
                class="skjemaelement__input"
                id="aarVelger"
              >
                <option
                  disabled=""
                  value=""
                >
                  Velg...
                </option>
                <option
                  value="2023"
                >
                  2023
                </option>
                <option
                  value="2022"
                >
                  2022
                </option>
                <option
                  value="2021"
                >
                  2021
                </option>
                <option
                  value="2020"
                >
                  2020
                </option>
                <option
                  value="2019"
                >
                  2019
                </option>
                <option
                  value="2018"
                >
                  2018
                </option>
              </select>
            </div>
          </div>
        </div>
      </div>
    </fieldset>
    <button
      class="navds-button navds-button--primary navds-button--medium navds-button--disabled"
      disabled=""
    >
      <span
        class="navds-label"
      >
        Bekreft og fortsett
      </span>
    </button>
    ;
  </div>
</div>
`;

exports[`VurderingAarsavreging > VurderingAarsavregning > snapshot test 1`] = `
<div>
  <div
    class="vurderingAarsavregning"
  >
    <h1
      class="typo-innholdstittel stegvelgertittel"
    >
      Årsavregning
    </h1>
    <fieldset
      class="fieldset select"
    >
      <legend
        class="fieldset__legend"
      >
        <div
          class="labelMedHjelpetekst__wrapper"
        >
          <span>
            <b>
              År
            </b>
          </span>
        </div>
      </legend>
      <div
        class="row"
      >
        <div
          class="col col-xs-4"
        >
          <div
            class="navds-form-field navds-form-field--medium"
          >
            <label
              class="navds-form-field__label navds-label"
              for="aarVelger"
            >
              
            </label>
            <div
              class="navds-select__container"
            >
              <select
                class="navds-select__input navds-body-short navds-body-short--medium"
                id="aarVelger"
              >
                <option
                  disabled=""
                  value=""
                >
                  Velg...
                </option>
                <option
                  value="2023"
                >
                  2023
                </option>
                <option
                  value="2022"
                >
                  2022
                </option>
                <option
                  value="2021"
                >
                  2021
                </option>
                <option
                  value="2020"
                >
                  2020
                </option>
                <option
                  value="2019"
                >
                  2019
                </option>
                <option
                  value="2018"
                >
                  2018
                </option>
              </select>
              <svg
                aria-hidden="true"
                class="navds-select__chevron"
                fill="none"
                focusable="false"
                height="1em"
                role="img"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  clip-rule="evenodd"
                  d="M5.97 9.47a.75.75 0 0 1 1.06 0L12 14.44l4.97-4.97a.75.75 0 1 1 1.06 1.06l-5.5 5.5a.75.75 0 0 1-1.06 0l-5.5-5.5a.75.75 0 0 1 0-1.06Z"
                  fill="currentColor"
                  fill-rule="evenodd"
                />
              </svg>
            </div>
            <div
              aria-live="polite"
              aria-relevant="additions removals"
              class="navds-form-field__error"
              id="select-error-aksel-id-1"
            />
          </div>
        </div>
      </div>
    </fieldset>
    <button
      class="navds-button navds-button--primary navds-button--medium"
    >
      <span
        class="navds-label"
      >
        Bekreft og fortsett
      </span>
    </button>
    ;
  </div>
</div>
`;

exports[`VurderingAarsavreging > snapshot test 1`] = `
<div>
  <div
    class="navds-stack navds-vstack"
    style="--__ac-stack-wrap: nowrap; --__ac-stack-gap-xs: var(--a-spacing-3); --__ac-stack-direction-xs: column; --__ac-stack-align-xs: start;"
  >
    <h1
      class="navds-heading navds-heading--large"
    >
      Årsavregning
    </h1>
    <div
      class="navds-stack navds-hstack"
      style="--__ac-stack-wrap: wrap; --__ac-stack-gap-xs: var(--a-spacing-4); --__ac-stack-direction-xs: row; --__ac-stack-align-xs: center;"
    >
      År:
      <div
        class="navds-form-field navds-form-field--medium"
      >
        <label
          class="navds-form-field__label navds-sr-only navds-label"
          for="select-aksel-id-1"
        >
          År:
        </label>
        <div
          class="navds-select__container"
        >
          <select
            class="navds-select__input navds-body-short navds-body-short--medium"
            data-testid="aarVelger"
            id="select-aksel-id-1"
          >
            <option
              value="2023"
            >
              2023
            </option>
            <option
              value="2022"
            >
              2022
            </option>
            <option
              value="2021"
            >
              2021
            </option>
            <option
              value="2020"
            >
              2020
            </option>
            <option
              value="2019"
            >
              2019
            </option>
            <option
              value="2018"
            >
              2018
            </option>
            <option
              value="2017"
            >
              2017
            </option>
          </select>
          <svg
            aria-hidden="true"
            class="navds-select__chevron"
            fill="none"
            focusable="false"
            height="1em"
            role="img"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M5.97 9.47a.75.75 0 0 1 1.06 0L12 14.44l4.97-4.97a.75.75 0 1 1 1.06 1.06l-5.5 5.5a.75.75 0 0 1-1.06 0l-5.5-5.5a.75.75 0 0 1 0-1.06Z"
              fill="currentColor"
              fill-rule="evenodd"
            />
          </svg>
        </div>
        <div
          aria-live="polite"
          aria-relevant="additions removals"
          class="navds-form-field__error"
          id="select-error-aksel-id-1"
        />
      </div>
    </div>
    <div
      class="navds-stack tabeller navds-vstack"
      style="--__ac-stack-wrap: nowrap; --__ac-stack-gap-xs: var(--a-spacing-6); --__ac-stack-direction-xs: column; --__ac-stack-align-xs: start;"
    />
    <fieldset
      class="navds-radio-group navds-radio-group--medium navds-fieldset navds-fieldset--medium"
    >
      <legend
        class="navds-fieldset__legend navds-label"
      >
        Er det avvik i opplysningene fra skatt eller bruker?
      </legend>
      <div
        class="navds-radio-buttons"
      >
        <div
          class="navds-radio navds-radio--medium"
        >
          <input
            aria-labelledby="aksel-id-3"
            class="navds-radio__input"
            id="radio-aksel-id-2"
            name="radioGroupName-aksel-id-9"
            type="radio"
            value="10"
          />
          <label
            class="navds-radio__label"
            for="radio-aksel-id-2"
          >
            <span
              class="navds-radio__content"
            >
              <span
                aria-hidden="true"
                class="navds-body-short navds-body-short--medium"
                id="aksel-id-3"
              >
                Ja
              </span>
            </span>
          </label>
        </div>
        <div
          class="navds-radio navds-radio--medium"
        >
          <input
            aria-labelledby="aksel-id-6"
            class="navds-radio__input"
            id="radio-aksel-id-5"
            name="radioGroupName-aksel-id-9"
            type="radio"
            value="20"
          />
          <label
            class="navds-radio__label"
            for="radio-aksel-id-5"
          >
            <span
              class="navds-radio__content"
            >
              <span
                aria-hidden="true"
                class="navds-body-short navds-body-short--medium"
                id="aksel-id-6"
              >
                Nei
              </span>
            </span>
          </label>
        </div>
      </div>
      <div
        aria-live="polite"
        aria-relevant="additions removals"
        class="navds-fieldset__error"
        id="fieldset-error-aksel-id-8"
      />
    </fieldset>
    <button
      class="navds-button navds-button--primary navds-button--medium"
    >
      <span
        class="navds-label"
      >
        Bekreft og fortsett
      </span>
    </button>
  </div>
</div>
`;

exports[`VurderingAarsavregning > snapshot test 1`] = `
<DocumentFragment>
  <div
    class="vurderingAarsavregning"
  >
    <h1
      class="typo-innholdstittel stegvelgertittel"
    >
      Årsavregning
    </h1>
    <fieldset
      class="fieldset select"
    >
      <legend
        class="fieldset__legend"
      >
        <div
          class="labelMedHjelpetekst__wrapper"
        >
          <span>
            <b>
              År
            </b>
          </span>
        </div>
      </legend>
      <div
        class="row"
      >
        <div
          class="col col-xs-4"
        >
          <div
            class="navds-form-field navds-form-field--medium"
          >
            <label
              class="navds-form-field__label navds-label"
              for="aarVelger"
            />
            <div
              class="navds-select__container"
            >
              <select
                class="navds-select__input navds-body-short navds-body-short--medium"
                id="aarVelger"
              >
                <option
                  disabled=""
                  value=""
                >
                  Velg...
                </option>
                <option
                  value="2023"
                >
                  2023
                </option>
                <option
                  value="2022"
                >
                  2022
                </option>
                <option
                  value="2021"
                >
                  2021
                </option>
                <option
                  value="2020"
                >
                  2020
                </option>
                <option
                  value="2019"
                >
                  2019
                </option>
                <option
                  value="2018"
                >
                  2018
                </option>
              </select>
              <svg
                aria-hidden="true"
                class="navds-select__chevron"
                fill="none"
                focusable="false"
                height="1em"
                role="img"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  clip-rule="evenodd"
                  d="M5.97 9.47a.75.75 0 0 1 1.06 0L12 14.44l4.97-4.97a.75.75 0 1 1 1.06 1.06l-5.5 5.5a.75.75 0 0 1-1.06 0l-5.5-5.5a.75.75 0 0 1 0-1.06Z"
                  fill="currentColor"
                  fill-rule="evenodd"
                />
              </svg>
            </div>
            <div
              aria-live="polite"
              aria-relevant="additions removals"
              class="navds-form-field__error"
              id="select-error-aksel-id-1"
            />
          </div>
        </div>
      </div>
    </fieldset>
    <button
      class="navds-button navds-button--primary navds-button--medium navds-button--disabled"
      disabled=""
    >
      <span
        class="navds-label"
      >
        Bekreft og fortsett
      </span>
    </button>
    ;
  </div>
</DocumentFragment>
`;
